# paper-digest

./: .env.example  .gitignore  CLAUDE.md
.claude/: settings.json
.github/workflows/: digest.yml
backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: auth.py  digest.py  sources.py
backend/services/: arxiv_service.py  auth_service.py  docs_service.py  gmail_service.py  llm_service.py  semantic_scholar_service.py
backend/tests/: test_arxiv_service.py  test_llm_service.py  test_semantic_scholar_service.py
docs/: add.md  add_requirements.md  requirements.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  digest.ts  sources.ts
frontend/src/pages/: Dashboard.tsx  DigestPreview.tsx  Settings.tsx  SourceForm.tsx
frontend/src/utils/: timezone.ts
