[project]
name = "paper-digest-backend"
version = "0.1.0"
description = "Paper Digest Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "arxiv>=4.0.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "google-genai>=1.73.1",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
